--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-openai>=1.0.0
-pandas>=1.3.0
-numpy>=1.20.0
-matplotlib>=3.4.0
-scikit-learn>=1.0.0
-tqdm>=4.62.0
-pathlib>=1.0.1
-seaborn>=0.11.0
-python-dotenv>=0.19.0 
+numpy==1.24.3
+pandas==2.0.2
+openai==1.3.0
+tqdm==4.65.0
+scikit-learn==1.2.2
+matplotlib==3.7.1
+seaborn==0.12.2
+pathlib==1.0.1
+requests==2.31.0 
